<resources>
    <string name="appName">莱特妮丝智瘦</string>
    <string name="nav_slimming">瘦身</string>
    <string name="nav_find">发现</string>
    <string name="nav_record">记录</string>
    <string name="nav_store">商城</string>
    <string name="nav_me">我的</string>
    <string name="nav_ranking">排行</string>
    <string name="heat">热量</string>
    <string name="sportsTime">时长</string>
    <string name="cancel">取消</string>
    <string name="ok">完成</string>
    <string name="confirm">确认</string>
    <string name="inputRightFoodName">请输入正确的食物名字</string>
    <string name="weightNoZero">重量不能为0</string>
    <string name="no_data">您还未收藏任何内容</string>
    <string name="addBreakfast">添加早餐</string>
    <string name="addLunch">添加午餐</string>
    <string name="addDinner">添加晚餐</string>
    <string name="addSnack">添加加餐</string>
    <string name="breakfast">早餐</string>
    <string name="lunch">午餐</string>
    <string name="dinner">晚餐</string>
    <string name="clearHistoryData">清空历史数据</string>
    <string name="can_eatHeat">还可以摄入热量</string>
    <string name="EatMore">多吃了</string>
    <string name="btn_leave">离开</string>
    <string name="btn_continue">继续领取</string>
    <string name="receivedCount">%1$s领取的体重数据（%2$d）</string>
    <string name="goBind">去绑定</string>
    <string name="goSporting">去运动</string>
    <string name="goWeigh">去称重</string>
    <string name="disConnected">未连接</string>
    <string name="connected">已连接</string>
    <string name="connecting">正在连接</string>
    <string name="unBind">未绑定</string>
    <string name="calm">慢走</string>
    <string name="warm">快走</string>
    <string name="grease">热身</string>
    <string name="aerobic">慢燃</string>
    <string name="anaerobic">快燃</string>
    <string name="limit">无氧</string>
    <string name="getVCode">获取验证码</string>
    <string name="inputVCode">请输入短信验证码</string>
    <string name="login_clause">注册即表示同意软件 服务条款和隐私条款</string>
    <string name="chooseSex">请选择您的性别</string>
    <string name="chooseBirth">请选择您的生日</string>
    <string name="chooseHeight">请输入您的身高</string>
    <string name="chooseWeight">请输入您的目标体重</string>
    <string name="chooseCity">请允许我们获取您的城市</string>
    <string name="chooseCity2">获取城市</string>
    <string name="AddDevice">添加设备</string>
    <string name="nextWay">下一步</string>
    <string name="skip">跳过</string>
    <string name="weight_about">您的身高体重只会作为您的运动参考数据，我们会保证您的隐私。</string>
    <string name="info_about">我们需要一些你的信息来为您定制瘦身计划，这些信息都是经过高度加密的。</string>
    <string name="Location_about">为了给您推送优质的资讯，我们将要获得您的位置信息。</string>
    <string name="device_about">请添加您最近购买的智能设备</string>
    <string name="doing">进行中</string>
    <string name="doingSubtitle">扫描附近的设备</string>
    <string name="bindDevice">绑定设备</string>
    <string name="bindDeviceSubtitle">绑定扫描到的设备</string>
    <string name="startUse">开始使用</string>
    <string name="startUseSubtitle">马上开始运动</string>
    <string name="scan">扫 描</string>
    <string name="reScan">重新扫描</string>
    <string name="nearDevice">附近的设备</string>
    <string name="bind">绑定</string>
    <string name="bindings">已绑定</string>
    <string name="notDevice">没有搜索到设备，请确保设备电量充足</string>
    <string name="web_load_error">出错啦！点击空白处刷新</string>
    <string name="scale">体脂称</string>
    <string name="clothing">瘦身衣</string>
    <string name="wx">微信</string>
    <string name="pengyouquan">朋友圈</string>
    <string name="shareTo">分享到</string>
    <string name="checkBle">请检查设备是否在附近,是否有电,或者关闭蓝牙重新开启试试</string>
    <string name="tip_nodata">还未上传数据 ！</string>
    <string name="tv_loading">正在加载</string>
    <string name="open_loaction">未给予定位权限，无法搜索到蓝牙设备</string>
    <string name="open_BLE">未开启蓝牙，无法搜索到蓝牙设备</string>
    <string name="ServiceAgreement">服务协议</string>
    <string name="phoneError">手机号码或邮箱不正确</string>
    <string name="passwordError">密码不合理（请输入不少于6位字母或数字）</string>
    <string name="VCodeError">验证码不正确</string>
    <string name="SMSSended">短信已发送</string>
    <string name="please_input_phone">请输入手机号码或邮箱</string>
    <string name="pleaseInputPassword">请输入密码</string>
    <string name="complete">完成</string>
    <string name="password_not_same">两次输入的密码不一致</string>
    <string name="settingPasswordSuccess">密码设置成功</string>
    <string name="speech_warm">您已进入热身区间，合理的热身运动可以避免运动损伤，建议热身五到十分钟</string>
    <string name="speech_grease">您已进入燃脂区间，该状态为高效燃脂，建议保持二十分钟以上以达到最佳效果，请注意心率控制在一百二十到一百四十之间。</string>
    <string name="speech_aerobic"> 您已进入有氧运动区间，该状态下的您可以充分的锻炼心肺功能，如果要达到瘦身效果，一定要坚持三十分钟以上 ！</string>
    <string name="speech_anaerobic">您已进入无氧运动区间，建议您适当的降低运动强度。</string>
    <string name="speech_limit"> 您的运动太快了，建议马上停止运动。</string>
    <string name="speech_currentKcal">您当前处于%1$s阶段</string>
    <string name="speech_sprotStart">运动模式已启动，让我们开始自由运动瘦身训练吧</string>
    <string name="speech_keepLimitSpeak">您当前运动量已超过身体最大极限，请立刻降低运动水平，防止意外损伤！</string>
    <string name="speech_planStart">主人您好，小莱今天帮您定制的运动课程总计%1$s分钟，预计燃烧%2$s卡路里，让我们开始运动吧</string>
    <string name="speech_ourseOne">第一节%1$s运动 请将配速保持在%2$d分钟每公里。</string>
    <string name="speech_warmComplete">恭喜您完成热身训练，下一节燃脂运动，请调节运动至燃脂运动区间，保持匀速%1$d分钟。</string>
    <string name="speech_fatBuringComplete">恭喜您完成燃脂训练，下一节有氧运动，请调节运动至有氧运动区间，保持匀速%1$d分钟。</string>
    <string name="speech_aerobicComplete">恭喜您完成有氧训练，下一节无氧运动，请调节运动至无氧运动区间，保持匀速%1$d分钟。</string>
    <string name="speech_anaerobicComplete">您当前处于无氧训练阶段，无氧训练有助于增强肌肉生长，提高基础代谢率。建议运动时长不超过 15 分钟。</string>
    <string name="speech_planFinishFail">本次训练计划还未完成 ，你确定要结束吗？今天的坚持是为了更美的明天。小莱为您加油打气</string>
    <string name="speech_planFinishSuccess">好棒呀，恭喜您完成本次瘦身训练。运动完记得做一下拉伸运动 ！本次训练共计燃烧%1$s千卡，请继续保持。</string>
    <string name="speech_freeSportFinish">运动已结束,您一共运动%1$s，共消耗%2$s千卡的能量</string>
    <string name="speech_sportPause">运动已暂停</string>
    <string name="speech_sportPlay">运动已恢复</string>
    <string name="speech_sportFast">请快一点，保持匀速有节奏的运动才能高效瘦身</string>
    <string name="speech_sportSlow">请慢一点，保持匀速有节奏的运动才能高效瘦身</string>
    <string name="speech_completeStage">恭喜您完成第%1$s阶段训练，请%2$s速度至%3$s区间</string>
    <string name="tipOpenBlueTooth">检测到您未开启手机蓝牙，开启蓝牙</string>
    <string name="checkSporting">检测到您正在运动，点击查看</string>
    <string name="checkHistoryWeight">您有新的体重数据，点击领取</string>
    <string name="completeDaytarget">恭喜，今天的运动目标已经完成，要再接再厉呀！</string>
    <string name="gotoSporting">今天还差%1$s\tkcal的运动量才能达到瘦身效果，快穿上减肥衣去运动吧。</string>
    <string name="bestWeight">你的最佳体重：%1$s-%2$s kg</string>
    <string name="search_noData">没有搜索到关于 " %1$s " 的食物 ，请您重新输入食物的关键字 ^-^</string>
    <string name="must_input">最多可以输入%1$d字</string>
    <string name="plan">感谢使用莱特妮丝智瘦为你科学定制的瘦身计划，为保证您的安全及瘦身效果，在参加此计划前请确保自己的身体情况属于以下范围：\n
\t1.\t身体质量指数（BMI）在18.5-40之间；\n
\t2.年龄在18-60之间；\n
\t3.产后女性已不在哺乳期，且距离上次生产一年以上；\n
\t4.未患有心血管、肺脏和代谢疾病：包括PAD（外周血管疾病）或脑血管疾病，COPD（慢性阻塞性肺疾病）、哮喘、间质性肺病或囊性纤维化，糖尿病、甲状腺异常和肾脏或肝脏疾病，且近期未有其他影响饮食或运动的病症。\n
\t5.运动过程中未出现以下症状或体征：\n
\t\t\t①由局部缺血引起的胸部、颈部、臂部或其他部位的疼痛；\n
\t\t\t②休息或轻微用力时气短；\n
\t\t\t③头晕眼花或晕厥；\n
\t\t\t④端坐呼吸或夜间阵发性呼吸困难；\n
\t\t\t⑤踝部水肿；\n
\t\t\t⑥心悸或心动过速；\n
\t\t\t⑦间歇性跛行；\n
\t\t\t⑧已知的心脏杂音；\n
\t\t\t⑨其他平常活动异常的疲劳或气短；\n
平台服务人员会根据您所提供的信息,为您科学的定制食谱和运动课程，出现以下情况请采取果断措施并反馈给服务人员：\n
\t1.\t\t运动过程中因个人身体差异出现异常情况，请立即停止运动并及时就医；\n
\t2.\t\t食谱中存在个人饮食禁忌的食材请勿食用;</string>
    <string name="phone_email">客服电话：43046554 \n客服邮箱：466113124@wesma</string>
    <string name="empty_recipes">亲爱的%1$s，营养师正在努力定制中，请耐心等待…</string>
    <string name="empty_record">亲爱的%1$s，此日期没有任何记录 ，点击按钮可以补录饮食…</string>
    <string name="empty_plan">亲爱的%1$s，服务人员正在努力为您定制课程，请耐心等待…</string>
    <string-array name="tab_text">
        <item>@string/nav_slimming</item>
        <item>@string/nav_record</item>
        <item>@string/nav_find</item>
        <item>@string/nav_ranking</item>
    </string-array>
    <string-array name="add_food">
        <item>@string/addBreakfast</item>
        <item>@string/addLunch</item>
        <item>@string/addDinner</item>
        <item>@string/addSnack</item>
    </string-array>
    <string-array name="bodyShape">
        <item>隐形肥胖</item>
        <item>偏胖</item>
        <item>肥胖</item>
        <item>缺乏运动</item>
        <item>标准</item>
        <item>体格强健</item>
        <item>偏瘦</item>
        <item>偏瘦肌肉</item>
        <item>健美肌肉</item>

    </string-array>
    <string-array name="problemType">
        <item>产品反馈</item>
        <item>使用咨询</item>
        <item>产品建议</item>
        <item>其它</item>
    </string-array>
    <string-array name="weightDatas">
        <item>体重</item>
        <item>体脂率</item>
        <item>BMI</item>
        <item>内脏脂肪等级</item>
        <item>肌肉量</item>
        <item>基础代谢</item>
        <item>水分</item>
        <item>骨量</item>
        <item>皮下脂肪率</item>
        <item>骨骼肌率</item>
        <item>蛋白质</item>
        <item>身体年龄</item>
        <item>去脂体重</item>
    </string-array>
    <string-array name="problemTimes">
        <item>很少出现</item>
        <item>一天一次</item>
        <item>一天多次</item>
        <item>始终出现</item>
    </string-array>
    <string-array name="week">
        <item>日</item>
        <item>一</item>
        <item>二</item>
        <item>三</item>
        <item>四</item>
        <item>五</item>
        <item>六</item>
    </string-array>
    <string-array name="foodTab">
        <item>全部</item>
        <item>主食</item>
        <item>蛋/肉制品</item>
        <item>奶制品</item>
        <item>蔬果/菌藻</item>
        <item>坚果/豆制品</item>
        <item>饮料</item>
        <item>零食/点心/冷饮</item>

    </string-array>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="expectKcal">运动时间%1$d min,预计消耗热量%2$d kcal</string>
    <string name="DietitianTip">亲爱的%1$s，了解到您过往的饮食习惯与爱好，今天为你制定的计划是%2$s。  \n养成良好的饮食习惯和健康科学的营养搭配能够更加快速健康的达到目标 ，加油！</string>
    <string name="dietPlanUser">%1$s营养师 为您搭配饮食</string>
    <string name="athlPlanUser">%1$s健身教练 为您定制课程</string>
    <string name="follow">跟着莱特妮丝智瘦</string>
    <string name="appDays">我在 %1$s 第%2$d 天</string>
    <string name="tv_firstTip">感谢您使用莱特妮丝智瘦-AI智能形体衣产品，为了能 够向您提供更加精准的服务，建议您开启定制 计划，请您根据提示填写信息，准确的信息有 助于制定精确的瘦身计划。</string>
    <string name="tv_firstTip2">成功开启后您就可以在健康报告中，了解到自己的体重 指标、体能状态和患病风险，获得专家的饮食和运动建 议。</string>
    <string name="planSporting">课程运动中</string>
    <string name="play">继续</string>
    <string name="pause">暂停</string>
    <string name="sportTip">运动提示</string>
    <string name="tip">提示</string>
    <string name="freeSporting">自由运动中</string>
    <string name="Speech_eachKm"><![CDATA[您已经跑步%1$s公里，累计消耗%2$s卡路里，当前配速%3$s每公里,累计用时%4$s,继续加油吧]]></string>
    <string name="Speech_each8Min"><![CDATA[您已经跑步%1$s公里，累计消耗%2$s卡路里，当前配速%3$s每公里,累计用时%4$s,您当前运动得分%5$s,请继续加油吧]]></string>
    <string name="speech_recipes">营养师%1$s今天给您推荐的食谱是%2$s</string>
    <string name="please_weigh">请光脚上称进行身体参数采集，以便为您计算运动时消耗的卡路里数</string>
    <string name="ranking">排行榜</string>
    <string name="openNotification">您的通知权限未开启，可能影响APP的正常使用</string>
    <string name="open">开启</string>
    <string name="update">升级</string>
    <string name="updateBleFirmwareVersion">是否升级到最新的固件版本?</string>
    <string name="logining">正在登陆</string>
    <string name="loginFail">登录失败</string>
    <string name="loginCancel">登录取消</string>
    <string name="loginPassword">密码登录</string>
    <string name="loginVCode">验证码登录</string>
    <string name="loginSuccess">登录成功</string>
    <string name="setPassword">设置密码</string>
    <string name="notPassword">该手机号还未设置密码</string>
    <string name="register">立即注册</string>
    <string name="notResigter">手机号未注册</string>
    <string name="registerSuccess">注册成功</string>
    <string name="clause">服务条款和隐私条款</string>
    <string name="softwareVersion">软件版本号 v %1$s</string>
    <string name="firmwareVersion">固件版本号 v %1$s</string>
    <string name="aboutUs">关于我们</string>
    <string name="newest">已经是最新版本，</string>
    <string name="unbindOtherAccount">解绑后将不能作为登录方式，确定解除微信账号绑定么？</string>
    <string name="unbind">解除绑定</string>
    <string name="unbindSuccess">解绑成功</string>
    <string name="myCollect">我的收藏</string>
    <string name="shareFail">分享失败</string>
    <string name="sharing">正在分享...</string>
</resources>