<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    tools:context=".ui.login.ForgetPasswordActivity">


    <com.qmuiteam.qmui.widget.QMUITopBar
        android:id="@+id/QMUIAppBarLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/topBarHeight"
        android:hapticFeedbackEnabled="true"
        app:qmui_topbar_bg_color="@color/white"
        app:qmui_topbar_left_back_drawable_id="@mipmap/icon_back"
        app:qmui_topbar_need_separator="false"
        app:qmui_topbar_title_color="@color/Gray"
        tools:visibility="visible"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/topBarHeight"
        android:background="@color/white"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingLeft="@dimen/dimen_35"
        android:paddingRight="@dimen/dimen_35"
        android:paddingTop="@dimen/dimen_20">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="验证手机号"
            android:textColor="@color/Gray"
            android:textSize="20sp"
            android:textStyle="bold"/>


        <EditText
            android:id="@+id/edit_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_40"
            android:background="@null"
            android:drawableLeft="@mipmap/icon_phone"
            android:drawablePadding="10dp"
            android:hint="@string/please_input_phone"
            android:inputType="phone"
            android:maxLength="11"
            android:textColor="@color/Gray"
            android:textColorHint="@color/GrayWrite"
            android:textSize="@dimen/dimen_15"
            tools:text="我是输入框"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_1"
            android:layout_below="@+id/edit_phone"
            android:layout_marginTop="@dimen/dimen_15"
            android:background="@color/BrightGray"/>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edit_Vcode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_35"
                android:background="@null"
                android:drawableLeft="@mipmap/icon_code"
                android:drawablePadding="10dp"
                android:hint="@string/inputVCode"
                android:inputType="number"
                android:maxLines="6"
                android:textColor="@color/Gray"
                android:textColorHint="@color/GrayWrite"
                android:textSize="@dimen/dimen_15"
                tools:text="我是密码框"/>

            <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
                android:id="@+id/btn_getVCode"
                android:layout_width="85dp"
                android:textSize="13sp"
                android:layout_height="36dp"
                android:layout_alignParentRight="true"
                android:layout_marginTop="@dimen/dimen_35"
                android:background="@mipmap/icon_biyan"
                android:text="@string/getVCode"
                android:textColor="@color/GrayWrite"
                app:qmui_borderColor="@color/GrayWrite"
                app:qmui_radius="@dimen/dimen_4"/>

        </RelativeLayout>


        <View
            android:layout_width="200dp"
            android:layout_height="@dimen/dimen_1"
            android:layout_below="@+id/edit_password"
            android:layout_marginRight="64dp"
            android:background="@color/BrightGray"/>


        <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
            android:id="@+id/btn_register"
            android:layout_width="260dp"
            android:layout_height="46dp"
            android:layout_alignParentRight="true"
            android:layout_marginTop="@dimen/dimen_35"
            android:enabled="false"
            android:text="下一步"
            android:textColor="@color/white"
            android:textSize="@dimen/dimen_18"
            app:qmui_backgroundColor="@color/BrightGray"
            app:qmui_borderColor="@color/white"
            app:qmui_radius="23dp"/>

    </LinearLayout>

</FrameLayout>